examples/sample-product-chart/chart-test/reports/scenario-gateway-api-envoy-gateway-security-policy-attach-20260531-183914-4/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"envoy"},"spec":{"controllerName":"gateway.envoyproxy.io/gatewayclass-controller"}}
    creationTimestamp: "2026-05-31T22:40:05Z"
    finalizers:
    - gateway-exists-finalizer.gateway.networking.k8s.io
    generation: 1
    name: envoy
    resourceVersion: "667"
    uid: dc87c2f5-2056-40f4-aa86-567eda09f6f2
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
  status:
    conditions:
    - lastTransitionTime: "2026-05-31T22:40:06Z"
      message: Valid GatewayClass
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
