examples/sample-product-chart/chart-test/reports/scenario-gateway-api-envoy-gateway-security-policy-attach-20260531-183914-4/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-05-31T22:40:02Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "627"
    uid: 9308de20-9005-475f-994c-6a2cd2a9144e
  spec:
    clusterIP: 10.96.7.21
    clusterIPs:
    - 10.96.7.21
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
